// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: LoginForm should match its snapshot. Display errors in inputs 1`] = `
<Form>
  <FormField
    errors={
      Object {
        "password": "some errors in password field",
        "username": "some errors in username field",
      }
    }
    name="username"
    placeHolder="Username"
    touched={Object {}}
    type="text"
    value={Object {}}
  />
  <FormField
    errors={
      Object {
        "password": "some errors in password field",
        "username": "some errors in username field",
      }
    }
    name="password"
    placeHolder="Password"
    touched={Object {}}
    type="password"
    value={Object {}}
  />
  <Button
    block={false}
    ghost={false}
    htmlType="submit"
    loading={false}
    type="primary"
  >
    Login
  </Button>
</Form>
`;

exports[`Component: LoginForm should match its snapshot. Display errors in inputs 2`] = `
<Form>
  <FormField
    errors={
      Object {
        "password": "",
        "username": "",
      }
    }
    name="username"
    placeHolder="Username"
    touched={Object {}}
    type="text"
    value={Object {}}
  />
  <FormField
    errors={
      Object {
        "password": "",
        "username": "",
      }
    }
    name="password"
    placeHolder="Password"
    touched={Object {}}
    type="password"
    value={Object {}}
  />
  <Button
    block={false}
    ghost={false}
    htmlType="submit"
    loading={false}
    type="primary"
  >
    Login
  </Button>
</Form>
`;
